syntax = "proto3";

package subscriptions;

// ===================================================
// SERVICE DEFINITION
// ===================================================
service SubscriptionService {
  rpc SubscribeToPlan (SubscribeToPlanRequest) returns (BaseSubscriptionResponse);
  rpc GetSubscriptionsByAccount (GetSubscriptionByAccountRequest) returns (BaseSubscriptionsResponse);
  
  // Updated Access Check
  rpc CheckModuleAccess (CheckModuleAccessRequest) returns (CheckModuleAccessResponse);
}

// ===================================================
// ERROR PAYLOAD
// ===================================================
message ErrorPayload {
  string code = 1;
  string message = 2;
  string details = 3;
}

// ===================================================
// ACCESS CHECK MESSAGES
// ===================================================
message CheckModuleAccessRequest {
  string accountUuid = 1;
  string moduleSlug = 2;
}

message AccessData {
  bool isAllowed = 1;
  string restrictions = 2; // JSON string
  optional string reason = 3;
}

message CheckModuleAccessResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  AccessData data = 4; // This contains the actual permission results
  ErrorPayload error = 5;
}

// ===================================================
// BASE RESPONSES
// ===================================================
message BaseSubscriptionResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  Subscription subscription = 4;
  ErrorPayload error = 5;
}

message BaseSubscriptionsResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  repeated Subscription subscriptions = 4;
  ErrorPayload error = 5;
}

// ===================================================
// ENTITIES & REQUESTS
// ===================================================
message Subscription {
  string id = 1;
  string subscriberUuid = 2;         
  string plan = 3;
  string type = 4;
  repeated string entityIds = 5; 
  string status = 6;
  string billingCycle = 7;
  float totalAmount = 8;     
  float amountPaid = 9;
  string currency = 10;
  string startedAt = 11;
  string expiresAt = 12;    
  string createdAt = 13;
  string updatedAt = 14;
}

message SubscribeToPlanRequest {
  string subscriberUuid = 1;           
  string planId = 2;                  
  repeated string entityIds = 3;      
  string billingCycle = 4;            
  string status = 5;                  
  float amountPaid = 6;
  string currency = 7;
  float totalAmount = 8;
  string type = 9;                    
}

message GetSubscriptionByAccountRequest {
  string accountUuid = 1;             
}

message EmptyRequest {}